--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Matt Castley</title></head>
-<body></body>
+<body style="display:flex;justify-content:center;align-items:center;height:100vh;font-family:sans-serif;">
+  Coming soon…
+</body>
 </html>
